--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
+    <link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
 </head>
 
 <body>
@@ -21,13 +21,13 @@
 
         <!-- //form with input and instruction to add an animal button -->
         <form id="add-animal">
-            <label for="animal-input"> Add An Animal</label> 
+            <label for="animal-input"> Type an animal name below to generate your own button</label> 
             <br>
             <input type="text" id="animal-input">
 
             <br>
         <!-- //will need this id to pull the user's text -->
-        <input id="animal-text" type="submit" value ="Add">
+        <input id="animal-text" type="submit" value ="Add My Animal ">
 
         </form>
 
